--- a/RTMB/vignettes/RTMB-tips.rmd
+++ b/RTMB/vignettes/RTMB-tips.rmd
@@ -21,7 +21,8 @@ formals(MakeADFun)$silent <- TRUE
 ## requirements for RTMB functions
 
 * the objective function **must be differentiable** with respect to parameters (no `if()`, `abs()`, `round()`, `min()`, `max()` depending on parameters)
-* have to implement exotic probability distributions yourself: anything that descends into C(++)/Fortran code will probably fail
+* exotic probability distributions may be found in [`RTMBdist`](https://janoleko.github.io/RTMBdist/). For other available implementations, anything that descends into C(++)/Fortran code will probably fail.
+If a distribution is not already available, you need to implement it yourself (and may want to issue a pull request).
 * aliases to base functions made before call to `library(RTMB)` [might not work](https://github.com/kaskr/RTMB/issues/69)
 * use of `<-[` (see [here](https://groups.google.com/g/tmb-users/c/HlPqkfcCa1g)) etc.
    * specifically, if you use the `c()` function, or if you use the `diag<-` function (which sets the diagonal of a matrix) or the `[<-` function (which assigns values within a matrix), you need to add e.g. `ADoverload("[<-")` to the beginning of your function
